--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <form id="f1" action="/action_page.php">
         Введите формулу: <input type="text" id = "1"> </input> <br>
     </form>    
-    <input type = "button" onclick = "Start()" value = "Поиск подформул"></input>
+    <input type = "button" onclick = "start()" value = "Поиск подформул"></input>
     <p></p>    
 <script src = "script.js"></script>
 </body>
