--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!--
-    author: Darya Volakh, 621702
+    //////////////////////////////////////////////////////////////////////////////////////
+// Лабораторная работа 2 по дисциплине ЛОИС
+// Выполнена студенткой группы 621702 БГУИР Волах Д.Ю.
+// Подсчёт количества подформул в формуле логики высказываний.
+// 26.02.2019
+//
+// https://learn.javascript.ru/
+// https://maxcdn.bootstrapcdn.com/
+//
+    //////////////////////////////////////////////////////////////////////////////////////
 -->
+
 <html>
 <head>
     <meta charset="utf-8">
@@ -9,11 +19,12 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body id="body">    
-    <span>Enter logical formula:</span>
+    <span>Enter a logic formula:</span>
     <form id="form">
         <input type="text" id="1"> </input>
     </form>    
-    <button type="button" class="btn" onclick="start()" value="find">start</button>   
+    <button type="button" class="btn" onclick="start()" value="find">start</button>  
+    <div class="generating" id="gener_div"></div> 
     <script src = "script.js"></script>
 </body>
 </html>
